desarrollo de proveedores y ajustes en cuadre de caja

--- a/src/app/cuadre-caja/cuadre-caja.component.html
+++ b/src/app/cuadre-caja/cuadre-caja.component.html
@@ -117,13 +117,13 @@
               </div>
               <div class="col col-md-3"></div>
               <div class="col col-md-3"></div> 
-        </div>
+        </div> 
         <div class="row">
             <div class="col col-md-3">
                 Efectivo
             </div>
             <div class="col col-md-3">
-                  <input  class="form-control" [(ngModel)]="cuadreCajaVo.efectivo" (blur)="calcularEnCaja()" readonly> 
+                  <input  class="form-control" [(ngModel)]="cuadreCajaVo.efectivo" (blur)="calcularEnCaja()" > 
               </div>
               <div class="col col-md-3"></div>
               <div class="col col-md-3"></div> 
