--- a/src/app/proveedor/proveedor.component.html
+++ b/src/app/proveedor/proveedor.component.html
@@ -3,4 +3,149 @@
   <div class="form-row">
     <h4 class="mt-3">Gestion de proveedores</h4>
   </div>
+  <br />
+  <div class="form-row">
+    <div class="form-group col-md-6">
+      <input class="form-control" id="nombreBuscar" placeholder="Nombres">
+    </div>
+    <div class="form-group col-md-6">
+      <input class="form-control" id="apellidoBuscar" placeholder="Apellidos">
+    </div>
+  </div>
+  <div class="form-row">
+    <div class="form-group col-md-6">
+      <input class="form-control" id="identificacionBuscar" placeholder="Identificación">
+    </div>
+    <div class="form-group col-md-6">
+      
+    </div>
+  </div>
+  <button type="submit" class="btn btn-primary mr-1" (click)="buscar()">Buscar</button>
+  <button type="button" (click)="limpiar()" class="btn btn-primary" data-toggle="modal"
+    data-target="#crearProveedorModal">
+    Crear
+  </button>
+  <table class="table table-hover mt-2">
+    <thead>
+      <tr>
+        <th scope="col">Opciones</th>
+        <th scope="col">Nombres</th>
+        <th scope="col">Apellidos</th>
+        <th scope="col">Identificación</th>
+        <th scope="col">Telefono</th>
+      </tr>
+    </thead>
+    <tbody>
+      <tr *ngFor="let user of proveedores">
+        <th scope="row">
+          <button type="button" (click)="editarCliente(user)" class="btn btn-secondary btn-sm" data-toggle="modal"
+            data-target="#crearProveedorModal">
+            Editar
+          </button>
+
+        </th>
+
+        <td>{{user.nombre}} {{user.segundo_nombre}}</td>
+        <td>{{user.apellidos}} {{user.segundo_apellido}}</td>
+        <td>{{user.documento}}</td>
+        <td>{{user.celular}} - {{user.fijo}}</td>
+      </tr>
+    </tbody>
+  </table>
+
+   <!-- crear proveedor Modal -->
+   <div class="modal fade" id="crearProveedorModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
+   aria-hidden="true">
+   <div class="modal-dialog" role="document">
+     <div class="modal-content">
+       <div class="modal-header">
+         <h5 class="modal-title" id="exampleModalLabel">Crear Proveedor</h5>
+         <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+           <span aria-hidden="true">&times;</span>
+         </button>
+       </div>
+       <div class="modal-body">
+         <div class="form-row">
+           <div class="form-group col-md-6 col-sm-6">
+             Primer nombre
+             <input class="form-control" id="nombreCliente" placeholder="* Nombres cliente" name="nombreCliente"
+               #nombreCliente required [(ngModel)]="proveedorNew.nombre">
+           </div>
+           <div class="form-group col-md-6 col-sm-6">
+             Segundo Nombre
+             <input class="form-control" id="segundoNombreCliente" placeholder="Segundo Nombre" name="segundoNombreCliente"
+               #segundoNombreCliente required [(ngModel)]="proveedorNew.segundo_nombre">
+              </div>
+         </div>
+         <div class="form-row">
+           <div class="form-group col-md-6 col-sm-6">
+             Primer Apellido
+             <input class="form-control" id="apellidoCliente" placeholder=" Apellidos cliente"
+             name="apellidoCliente" #apellidoCliente required [(ngModel)]="proveedorNew.apellidos">
+           </div>
+           <div class="form-group col-md-6 col-sm-6">
+             Segundo Apellido
+             <input class="form-control" id="segundoApellidoCliente" placeholder=" Segundo Apellidos"
+             name="segundoApellidoCliente" #segundoApellidoCliente required [(ngModel)]="proveedorNew.segundo_apellido">
+           </div>
+         </div>
+         <div class="form-row">
+           <div class="form-group col-md-6 col-sm-6">
+             Tipo Identificación
+             <select id="tipoIdentificacion" name="pagoPV" #tipoIdentificacion placeholder="" [(ngModel)]="proveedorNew.tipo_identificacion_id"  class="form-control" >
+             <option value="">Seleccione</option>
+             <option *ngFor="let pago of tipoIdentificacionList" [value]="pago.tipo_identificacion_id">
+               {{pago.nombre_corto}} {{pago.nombre}}
+             </option>
+           </select>
+           </div>
+           <div class="form-group col-md-6 col-sm-6">
+            Identificación
+             <input class="form-control" id="documentoCliente" placeholder="* Documento cliente"
+               name="documentoCliente" #documentoCliente required [(ngModel)]="proveedorNew.documento">
+           </div>
+         
+         </div>
+         <div class="form-row">
+           <div class="form-group col-md-6 col-sm-6">
+             Dirección Cliente
+             <input class="form-control" id="direccionCliente" placeholder="* Dirección cliente"
+               name="direccionCliente" #direccionCliente required [(ngModel)]="proveedorNew.direccion">
+           </div>
+           <div class="form-group col-md-6 col-sm-6">
+             Fijo
+             <input class="form-control" id="fijoCliente" placeholder="Telefono fijo" name="fijoCliente"
+               #fijoCliente required [(ngModel)]="proveedorNew.fijo">
+           </div>
+         </div>
+         <div class="form-row">
+           <div class="form-group col-md-6 col-sm-6">
+             Celular
+             <input class="form-control" id="celular" placeholder="Telefono Celular" name="celular"
+               #celular required [(ngModel)]="proveedorNew.celular">
+           </div>
+           <div class="form-group col-md-6 col-sm-6">
+             Mail
+             <input class="form-control" id="mailCliente" placeholder="* Correo cliente" name="mailCliente"
+               #mailCliente required [(ngModel)]="proveedorNew.mail">
+           </div>
+         </div>
+         <div class="form-row">
+           <div class="form-group col-md-6 col-sm-6">
+             % de retención
+             <input class="form-control" id="retencion" type="number" min="0" max="100" placeholder="% de retención" name="retencion"
+               #retencion required [(ngModel)]="proveedorNew.retencion">
+           </div>
+           <div class="form-group col-md-6 col-sm-6">
+           
+           </div>
+         </div> 
+       </div>
+       <div class="modal-footer">
+         <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancelar</button>
+         <button type="button" class="btn btn-primary" (click)="CrearCliente()">Crear</button>
+       </div>
+     </div>
+   </div>
+ </div>
 </div>
