--- a/src/app/gestion-orden/gestion-orden.component.html
+++ b/src/app/gestion-orden/gestion-orden.component.html
@@ -138,7 +138,7 @@
           </button>
         </div>
         <div class="form-group col-md-6 col-sm-1">
-          <h5>Total Orden: ${{formatearNumber(valorTotal)}}</h5>
+          <h5>Total Orden: ${{formatearNumber(documento.total)}}</h5>
         </div>
       </div>
       <br />
