--- a/src/app/gestion-orden/gestion-orden.component.html
+++ b/src/app/gestion-orden/gestion-orden.component.html
@@ -755,6 +755,17 @@
                   </select>
                 </div>
               </div>
+              <div class="form-row">
+                <div class="form-group col-md-6 col-sm-6">
+                  Resolución de facturación:
+                </div>
+                <div class="form-group col-md-6 col-sm-6">
+                  <select class="form-control" id="resolucionEmpresa" #resolucionEmpresa>
+                    <option *ngFor="let tp of resolucionAll">{{tp.nombre}}</option>
+
+                  </select>
+                </div>
+              </div>
 
               <div class="form-row">
                 <div class="form-group col-md-12 col-sm-12">
