--- a/src/app/reporte-productos/reporte-productos.component.html
+++ b/src/app/reporte-productos/reporte-productos.component.html
@@ -31,6 +31,12 @@
     (click)="buscar(grupoPV,proveedorPV)">Buscar </button>
     <button type="button" class="btn btn-primary ml-2"
     (click)="exportTableToExcel(tblData)">Exportar </button>
+    <button type="button" class="btn btn-primary ml-2" data-toggle="modal"
+     data-target="#imprimirModal">
+    Imprimir
+  </button>
+    <button type="button" class="btn btn-primary ml-2"
+    (click)="reporteCostos()">Exportar reporte costos</button>
   </div>
   <br />
   <table class="table table-hover" id="tblData" #tblData>
@@ -61,5 +67,38 @@
     <a href="#" name="downloadZipLink" #downloadZipLink id="downloadZipLink" download>
 
     </a>
+</div>
+
+
+  <!-- Modal imprimir-->
+  <div class="modal fade bd-example-modal-sm" id="imprimirModal" tabindex="-1" role="dialog"
+  aria-labelledby="exampleModalLabel" aria-hidden="true">
+  <div class="modal-dialog modal-sm" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="exampleModalLabel">Imprimir Reporte de productos</h5>
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      <div class="modal-body">
+      
+        <div class="form-row">
+          <div class="form-group col-md-12 col-sm-12">
+            Seleccione La impresora:
+          </div>
+          <div class="form-group col-md-12 col-sm-12">
+            <select class="form-control" #impresoraOrden id="impresoraOrden">
+              <option *ngFor="let imp of impresoraEmpresa" value="{{imp.numero_impresora}}">{{imp.nombre_impresora}}</option>
+            </select>
+          </div>
+        </div>
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancelar</button>
+        <button type="button" class="btn btn-primary" (click)="imprimirOrden(impresoraOrden)">Imprimir</button>
+      </div>
+    </div>
+  </div>
 </div>
 </div>
